--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#AAAAAA</color>
+
+    <color name="yellow">#FBC02D</color>
+    <color name="green">#388E3C</color>
+    <color name="blue">#0288D1</color>
+    <color name="red">#D32F2F</color>
 </resources>
