--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -40,6 +40,7 @@
         app:layout_constraintStart_toStartOf="@id/guideline_start"
         app:layout_constraintEnd_toEndOf="@id/guideline_end"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
+        android:layout_marginTop="8dp"
         android:hint="@string/label_title"
         >
 
@@ -52,16 +53,18 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_description"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="128dp"
         app:layout_constraintStart_toStartOf="@id/guideline_start"
         app:layout_constraintEnd_toEndOf="@id/guideline_end"
         app:layout_constraintTop_toBottomOf="@id/til_title"
+        android:layout_marginTop="8dp"
         android:hint="@string/label_description"
         >
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            android:gravity="start" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,6 +76,7 @@
         app:layout_constraintEnd_toStartOf="@id/til_hour"
         app:layout_constraintTop_toBottomOf="@id/til_description"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
         android:hint="@string/label_date"
         app:startIconDrawable="@drawable/ic_calendar"
         >
@@ -91,7 +95,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/til_date"
         app:layout_constraintEnd_toEndOf="@id/guideline_end"
-        app:layout_constraintTop_toBottomOf="@id/til_description"
+        app:layout_constraintTop_toTopOf="@id/til_date"
         android:layout_marginStart="8dp"
         android:hint="@string/label_hour"
         app:startIconDrawable="@drawable/ic_clock"
@@ -111,7 +115,7 @@
         app:layout_constraintStart_toStartOf="@id/guideline_start"
         app:layout_constraintEnd_toEndOf="@id/guideline_end"
         app:layout_constraintTop_toBottomOf="@id/til_date"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:padding="8dp"
         android:orientation="horizontal"
         android:gravity="center"
