--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#AAAAAA</color>
 
-    <color name="yellow">#FBC02D</color>
+    <color name="yellow">#FFA000</color>
     <color name="green">#388E3C</color>
     <color name="blue">#0288D1</color>
     <color name="red">#D32F2F</color>
+    <color name="transparent">@android:color/transparent</color>
 </resources>
