--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -51,7 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:inputType="text" />
+            android:inputType="textCapSentences|textAutoCorrect"
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -70,7 +71,13 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="start" />
+            android:gravity="start"
+            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
+            android:autoLink="web|phone"
+            android:linksClickable="true"
+            android:textColorLink="@color/link"
+            tools:text="www.google.com"
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -132,7 +139,8 @@
             style="@style/tb_background_color"
             android:backgroundTint="@color/transparent"
             android:checked="true"
-            android:drawableBottom="@drawable/ic_no_color" />
+            android:drawableBottom="@drawable/ic_no_color"
+            android:drawableTint="?attr/colorControlNormal" />
 
         <ToggleButton
             android:id="@+id/btn_yellow"
@@ -168,6 +176,7 @@
         app:layout_constraintEnd_toEndOf="@id/guideline_end"
         app:layout_constraintBottom_toTopOf="@id/btn_cancel"
         android:text="@string/label_save_task"
+        android:enabled="false"
         />
 
     <com.google.android.material.button.MaterialButton
