--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,29 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/ib_menu"
         android:layout_margin="16dp"
         android:text="@string/label_tasks"
         android:textStyle="bold"
         android:textSize="24sp"
+        />
+
+    <ImageButton
+        android:id="@+id/ib_menu"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tv_title"
+        app:layout_constraintTop_toTopOf="@id/tv_title"
+        app:layout_constraintBottom_toBottomOf="@id/tv_title"
+        android:layout_marginEnd="16dp"
+        android:foreground="@drawable/ic_filter"
+        android:foregroundTint="@color/icon_color"
+        android:background="?attr/actionBarItemBackground"
         />
 
     <androidx.recyclerview.widget.RecyclerView
