--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="gray">#AAAAAA</color>
+    <!-- Customized Colors -->
+    <color name="icon_color">#D5D5D5</color>
+    <color name="link">#CAE7FB</color>
 
-    <color name="yellow">#8F5900</color>
-    <color name="green">#2A682D</color>
-    <color name="blue">#00598A</color>
-    <color name="red">#7C1C1C</color>
-    <color name="transparent">@android:color/transparent</color>
+    <color name="yellow">#755B13</color>
+    <color name="green">#064D10</color>
+    <color name="blue">#24356E</color>
+    <color name="red">#7A1731</color>
+    <color name="transparent">@color/md_theme_dark_background</color>
 
 </resources>
