--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+
+    <!-- Customized Colors -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#AAAAAA</color>
 
-    <color name="yellow">#FFA000</color>
-    <color name="green">#388E3C</color>
-    <color name="blue">#0288D1</color>
-    <color name="red">#D32F2F</color>
-    <color name="transparent">@android:color/transparent</color>
+    <color name="link">#0907A3</color>
+    <color name="icon_color">#171717</color>
+
+    <color name="yellow">#FFC114</color>
+    <color name="green">#00D61F</color>
+    <color name="blue">#5991FF</color>
+    <color name="red">#FF3D49</color>
+    <color name="transparent">@color/cardview_light_background</color>
+
+    <!-- Generate with:
+    https://material-foundation.github.io/material-theme-builder/ -->
+    <color name="md_theme_light_primary">#835500</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#FFDDAF</color>
+    <color name="md_theme_light_onPrimaryContainer">#2A1800</color>
+    <color name="md_theme_light_secondary">#3A3AFF</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#E0E0FF</color>
+    <color name="md_theme_light_onSecondaryContainer">#01006E</color>
+    <color name="md_theme_light_tertiary">#00696D</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#6EF6FC</color>
+    <color name="md_theme_light_onTertiaryContainer">#002022</color>
+    <color name="md_theme_light_error">#BA1B1B</color>
+    <color name="md_theme_light_errorContainer">#FFDAD4</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410001</color>
+    <color name="md_theme_light_background">#FCFCFC</color>
+    <color name="md_theme_light_onBackground">#1F1B16</color>
+    <color name="md_theme_light_surface">#FCFCFC</color>
+    <color name="md_theme_light_onSurface">#1F1B16</color>
+    <color name="md_theme_light_surfaceVariant">#F0E0CF</color>
+    <color name="md_theme_light_onSurfaceVariant">#4F4539</color>
+    <color name="md_theme_light_outline">#817567</color>
+    <color name="md_theme_light_inverseOnSurface">#F9EFE7</color>
+    <color name="md_theme_light_inverseSurface">#34302A</color>
+    <color name="md_theme_light_primaryInverse">#FFB94A</color>
+    <color name="md_theme_dark_primary">#FFB94A</color>
+    <color name="md_theme_dark_onPrimary">#462B00</color>
+    <color name="md_theme_dark_primaryContainer">#633F00</color>
+    <color name="md_theme_dark_onPrimaryContainer">#FFDDAF</color>
+    <color name="md_theme_dark_secondary">#BFC2FF</color>
+    <color name="md_theme_dark_onSecondary">#0600AC</color>
+    <color name="md_theme_dark_secondaryContainer">#0B00EE</color>
+    <color name="md_theme_dark_onSecondaryContainer">#E0E0FF</color>
+    <color name="md_theme_dark_tertiary">#4CD9DF</color>
+    <color name="md_theme_dark_onTertiary">#00373A</color>
+    <color name="md_theme_dark_tertiaryContainer">#004F53</color>
+    <color name="md_theme_dark_onTertiaryContainer">#6EF6FC</color>
+    <color name="md_theme_dark_error">#FFB4A9</color>
+    <color name="md_theme_dark_errorContainer">#930006</color>
+    <color name="md_theme_dark_onError">#680003</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD4</color>
+    <color name="md_theme_dark_background">#1F1B16</color>
+    <color name="md_theme_dark_onBackground">#EAE1D9</color>
+    <color name="md_theme_dark_surface">#1F1B16</color>
+    <color name="md_theme_dark_onSurface">#EAE1D9</color>
+    <color name="md_theme_dark_surfaceVariant">#4F4539</color>
+    <color name="md_theme_dark_onSurfaceVariant">#D3C4B4</color>
+    <color name="md_theme_dark_outline">#9C8F80</color>
+    <color name="md_theme_dark_inverseOnSurface">#1F1B16</color>
+    <color name="md_theme_dark_inverseSurface">#EAE1D9</color>
+    <color name="md_theme_dark_primaryInverse">#835500</color>
+    <color name="seed">#F2A30F</color>
+    <color name="error">#BA1B1B</color>
+
 </resources>
